app/assets/stylesheets/pages/_home.scss
// Specific CSS for your home-page
.contain-featured-artist {
	height: 500px;
	overflow: hidden;
	.info-side {
	    z-index: 1000;
		padding: 20px;
	    flex-direction: column;
	    justify-content: center;
		hr {
			width: 200%;
		    border: solid 1px $beige;
		}
		 @include media-breakpoint-up(sm) {
   			padding: 68px 100px;
			height: 400px;
      }
	}
	.featured-artist-photo {
		background-size: cover;
	    background-position: center;
	  	border-radius: 60% 0 0 60%;
	    width: 110%;
	    height: 280px;
	    position: relative;
	    @include media-breakpoint-up(sm) {
		    left: 0px;
		    top: -88px;
   			position: absolute;
			height: 660px;
      }
	}
}
 
.header-text {
	font-size: 30px;
}

.socmed-link {
	font-size: 28px;
    color: white !important;
    text-decoration: none;
    padding-right: 8px;
}

.featured-artwork-photo {
	background: lightgray;
	background-size: cover;
    height: 293px;
    .overlay {
	    opacity: 0;
	    left: 0;
	    background-color: #274e58c4;
	    height: 100%;
	    color: white;
	    padding: 25px;
	    transition: ease 1s all;
	    width: 100%;
	    align-items: flex-start;
	    flex-direction: column;
	    position: absolute;
	    display: flex;
	    justify-content: flex-end;
    	&:hover {
   			opacity: 1;
	    }
    }
}

.small-wave-bottom {
	width: 40vw !important;
}

.cta-wrapper {
	min-height: 25rem;
  height: auto;
	background-size: cover;
	background-position: center;
	.cta-text {
	    width: 100%;
	    height: 100%;
	    text-align: center;
	    padding: 99px 0;
	    h3 {
	    	max-width: 870px;
		    line-height: 46px;
		    margin: auto;
		    text-shadow: 1px 1px 30px black;
	    }
	}
	.button-secondary {
		color: white !important;
	}
}
.artist-cards {
	transition: ease .5s all;
	margin-bottom: 25px;
	a {
		text-decoration: none;
	}	
	&-img {
	height: 250px;
	margin-bottom: 10px;
	transition: ease .5s all;
	border-radius: 3px;
	background-size: cover;	
	background-position: center;
	}
	&:hover {
		transform: translateY(-3px);
		.artist-cards-img {
		box-shadow: 1px 1px 20px gray;
		}

	}

}

.artwork-artist-index {
	margin-top: -63px;
}

.artist-carousel {
	.flickity-page-dots {
		bottom: 45px;
	}
	box-shadow: $shadow-light;
} 
 
.artist-carousel-cell {
	width: 100%;
}

#quotation-home {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.featured-post-photo {
	height: 130px;
    margin-right: 27px;
    box-shadow: $shadow-light;
    border-radius: 3px;
    min-width: 120px;
    background-size: cover;
}

.home-quote {
	font-size: 1.7rem !important;
}

.home-wave-top {
	width: 45vw !important;
}

.home-banner {
	height: 30vh;
	.logo-works {
	    width: 74%;
	    position: absolute;
	    top: -100px;
	    left: -21px;
	}
	 @include media-breakpoint-up(sm) {
   			height: 80vh;
      }
}

.text-lockup-banner {
	 padding: 30px 38px;
   	 margin-bottom: 80px;
	 h2 {
	 	font-size: 30px; 
	 }
	  @include media-breakpoint-up(sm) {
   			margin-bottom: 0;
      }
}

.intro-text {
	flex-direction: column;
}

.post {
	margin: 35px 0;
	transition: ease .5s all;
	padding: 13px;
	border-radius: 3px;
	a {
		&:hover {
			text-transform: underline;
		}
	}
	.lockup {
		display: flex;
	    flex-direction: column;
	    justify-content: space-between;
	    p {
	    	max-width: 290px;
	    }
	}
	&:hover {
		box-shadow: $shadow-light;
	}
	.fake-link {
		&:hover {
			text-decoration: underline;
		}
	}
}

